src/components/home/search.module.scss
@import "/src/mixins";
@import "/src/variables";
.search {
  padding-top: 20px;
  padding-bottom: 30px;

  &Wrap {
    background-color: #fff;
    @include section-width;
    display: grid;
    grid-template-columns: 1fr 1fr 150px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;

    .selectWrap {
      margin: 15px;
      display: flex;
      align-items: center;
      gap: 10px;
      border-right: 1px solid rgba(196, 196, 196, 0.87);
      padding: 5px;
      padding-right: 20px;
      
      input{
        // width: 200px;
        flex: auto;
        width: auto;
        &:focus{
          border: none;
          outline: none;
        }
      }
    }
    .inputWrap{
      width: 100%;
      display: flex;
      gap: 10px;
      .selectedTerm{
        display: flex;
        align-items: center;
        gap: 5px;
        background: teal;
        color: #fff;
        padding: 5px 8px ;
        border-radius: 30px;
        width: max-content;
        text-align: center;
        p{
          font-size: 14px;
        }
        img{
          width: 18px;
          cursor: pointer;
        }

      }
    }
    .locationInputWrap{
      width: 100%;
      margin-left: 12px;
      position: relative;
      input{
        width: 100%;
        &:focus{
          border: none;
          outline: none;
        }
      }
    }
    .suggestionsWrap{
      border-radius: 4px;
      position: absolute;
      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
      z-index: 9999;
      top: 35px;
      width: 100%;
    }
    .suggestion{
      padding: 5px;
      font-size: 15px;
      font-weight: 600;
    }
    .location {
      padding: 15px;
      display: flex;
      padding: 20px;
      align-items: center;
    }
    .searchButton {
      button{
        border-top-right-radius: 5px;
        border-bottom-right-radius: 5px;
        background: #0062ff;
        color: #fff;
        width: 100%;
        font-size: 18px;
        font-weight: 600;
        height: 100%;
        border: none;
        transition: all .3s ease;
        cursor: pointer;
        &:hover{
          background: #075ce4;
        }

      }
    }
  }
}

